# paper-radar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
daily-arxiv-grok/: README.md
data/: total_ids.txt
prompts/: deepseek_system.txt
src/paperscout/: arxiv_client.py  dedupe.py  models.py  runner.py  scorer.py  summarize.py  themes.yaml
